# uecda_python

./: .gitignore  README.md  docker-compose.tournament.yml  docker-compose.yml
docs/: docker.md  game-log.md
scripts/: log_viewer.py  run_game.sh
uecda_client/: .dockerignore  Dockerfile  README.md  pyproject.toml
uecda_client/uecda_client/: __init__.py  main.py
uecda_client/uecda_client/game/: __init__.py  state.py
uecda_client/uecda_client/models/: __init__.py  card.py
uecda_client/uecda_client/network/: __init__.py  connection.py  protocol.py
uecda_client/uecda_client/strategy/: __init__.py  analyzer.py  base.py  simple.py
uecda_server/: Dockerfile  README.md  config.yml  main.py  pyproject.toml
uecda_server/scripts/: test_with_c_clients.sh
uecda_server/tests/: __init__.py  test_analyzer.py  test_card.py  test_protocol.py
uecda_server/uecda_server/: __init__.py  config.py  main.py
uecda_server/uecda_server/game/: __init__.py  analyzer.py  engine.py  validator.py
uecda_server/uecda_server/logging/: __init__.py  formatters.py  game_logger.py
uecda_server/uecda_server/models/: __init__.py  card.py  game_state.py  player.py
uecda_server/uecda_server/network/: __init__.py  protocol.py  server.py
uecda_server/uecda_server/utils/: logger.py
